# zz-drop

./: AGENTS.md  CHANGELOG.md  COMMANDS.md  Cargo.toml  README.md  SECURITY.md  dist-workspace.toml  release-key.pub
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  codeql.yml  patch-formula.yml  patch-installer.yml  release.yml  sign-release.yml  smoke-installer.yml
.github/workflows/release-hooks/: build-setup.yml
core/: Cargo.toml  LICENSE-APACHE
core/docs/: README.md  commands.md  config.md  file-encryption.md
core/docs/api/: README.md
core/docs/providers/: dropbox.md  google-drive.md  onedrive.md
core/src/: diag_log.rs  errors.rs  lib.rs  sidecars.rs
core/src/agent_proto/: mod.rs
core/src/api/: client.rs  errors.rs  mod.rs
core/src/completions/: framework.rs  mod.rs  paths.rs  rc_block.rs  scripts.rs  shell.rs
core/src/completions/scripts/: bash.sh  fish.fish  zsh.sh
core/src/config/: mod.rs  paths.rs
core/src/crypto/: aead.rs  compression.rs  mod.rs  profile_envelope.rs
core/src/output/: json.rs  mod.rs
core/src/profile/: mod.rs  policy.rs  rotation.rs  set.rs
core/src/providers/: oauth_clients.rs
core/src/providers/dropbox/: mod.rs
core/src/providers/google_drive/: mod.rs  types.rs
core/src/providers/nextcloud/: collision.rs  path.rs  types.rs
core/src/providers/oauth/: device_flow.rs  paste_code.rs
core/src/providers/onedrive/: errors.rs  mod.rs  rest.rs
core/src/scriptable/: mod.rs  schema.rs
core/tests/: agent_proto.rs  api_client_live.rs  api_dto.rs  profile_crypto.rs  types_serde.rs  webdav_path.rs
docs/: README.md  agent-protocol.md  agent.md  build.md  commands.md  config.md  dropbox.md  feature-flags.md  google-drive.md  login-flow.md  nextcloud.md  onedrive.md  profile-format.md  profile-passphrase.md  sacs.md  screens.md  scriptable.md  security-model.md  security.md  usage.md
docs/api/: README.md  openapi.yaml
docs/assets/: .gitkeep
docs/providers/: nextcloud.md
docs/scriptable/: zz-drop-output.v1.json
examples/: setup_test_profile.rs
scripts/: dev-rebuild.sh  smoke-installer.sh
src/: color.rs  config.rs  lib.rs  main.rs  output.rs  passphrase.rs  picker.rs  runtime.rs
src/agent/: client.rs  list_cache.rs  lock.rs  mod.rs  remote_client.rs  security.rs  server.rs  state.rs
src/cli/: mod.rs  parser.rs
src/commands/: batch.rs  doctor.rs  download.rs  mod.rs  open_tui.rs  q_lock.rs  remote_fs.rs  upload.rs  w_wipe.rs  walk.rs  z_remote.rs  z_unlock.rs
src/sacs/: agent_source.rs  complete.rs  help.rs  mod.rs  render.rs  state.rs
src/sacs/scripts/: bash.sh  mod.rs  zsh.sh
tests/: agent_lifecycle.rs  agent_list_remote.rs  cli_parser.rs  command_c.rs  commands_download.rs  commands_upload.rs  config_paths.rs  output.rs  scriptable_routing.rs  scriptable_universal.rs
tui/: Cargo.toml  README.md
tui/docs/: profile-passphrase.md  ratatui-notes.md  screens.md
tui/docs/assets/: .gitkeep
tui/examples/: provider_preview.rs  qr_in_app.rs  qr_inline.rs  qr_smoke.rs  smoke.rs
tui/src/: agent_kill.rs  app.rs  cli.rs  lib.rs  qr.rs  wizard.rs
tui/src/screens/: account.rs  done.rs  inner_alias.rs  nextcloud_login_flow.rs  nextcloud_server.rs  profile_manage.rs  provider.rs  remote_folder.rs  setup_dropbox.rs  test_upload.rs  welcome.rs
tui/src/tui_widgets/: check.rs  form_field.rs  glyphs.rs  keybar.rs  pill.rs  radio.rs  tag.rs
tui/src/ui/: mod.rs
tui/tests/: done_screen.rs  login_flow_ui.rs  provider_smoke.rs  setup_onedrive.rs  welcome_smoke.rs
zz-drop-core/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
zz-drop-core/.github/ISSUE_TEMPLATE/: feature.yml
zz-drop-core/docs/: agent-protocol.md  feature-flags.md  file-encryption.md  profile-format.md
zz-drop-core/docs/api/: README.md
zz-drop-core/docs/providers/: dropbox.md  google-drive.md  nextcloud.md  onedrive.md
zz-drop-core/examples/: decrypt_check.rs
zz-drop-core/src/: lib.rs
zz-drop-core/src/agent_proto/: framing.rs  types.rs
zz-drop-core/src/api/: dto.rs  mod.rs  version.rs
zz-drop-core/src/config/: local_config.rs  mod.rs  paths.rs
zz-drop-core/src/crypto/: compression.rs  kdf.rs
zz-drop-core/src/profile/: format.rs  types.rs
zz-drop-core/src/providers/: mod.rs
zz-drop-core/src/providers/dropbox/: errors.rs  mod.rs  rest.rs  types.rs
zz-drop-core/src/providers/google_drive/: errors.rs  mod.rs  rest.rs
zz-drop-core/src/providers/nextcloud/: login_flow.rs  mod.rs  webdav.rs
zz-drop-core/src/providers/oauth/: mod.rs
zz-drop-core/src/providers/onedrive/: mod.rs  types.rs
zz-drop-core/tests/: api_dto.rs  profile_set_crypto.rs  types_serde.rs  webdav_path.rs
zz-drop-tui/: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md
zz-drop-tui/.github/: copilot-instructions.md
zz-drop-tui/.github/ISSUE_TEMPLATE/: bug.yml
zz-drop-tui/docs/: README.md  login-flow.md  profile-passphrase.md  screens.md  setup.md
zz-drop-tui/src/: alias_gen.rs  api_client.rs  app.rs  clipboard.rs  input.rs  lib.rs  main.rs  strength.rs  theme.rs  upload_test.rs  wizard.rs
zz-drop-tui/src/screens/: collision.rs  container_picker.rs  done.rs  login_totp.rs  mod.rs  nextcloud_auth.rs  profile_manage.rs  profile_passphrase.rs  profile_unlock.rs  provider.rs  push_profile.rs  setup_dropbox.rs  setup_google_drive.rs  setup_onedrive.rs  welcome.rs
zz-drop-tui/src/tui_widgets/: bar.rs  form_field.rs  mod.rs  nav_item.rs  panel.rs  steps.rs  title_bar.rs  tui_btn.rs  two_col.rs
zz-drop-tui/src/ui/: layout.rs  mod.rs
zz-drop-tui/tests/: add_inner_profile_flow.rs  done_screen.rs  passphrase_screen.rs  setup_dropbox.rs  setup_onedrive.rs
