[package]
name = "zz-drop"
version = "0.0.1-pre.5"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "CLI and local agent for zz-drop"
repository = "https://github.com/zz-drop/zz-drop"
homepage = "https://zz-drop.net"
publish = false
exclude = [".github/"]

[package.metadata.dist]
dist = true

[features]
default = []
# Internal feature gate for in-development account-side surface.
# Default builds have no network code or host strings reachable
# at runtime under this flag.
remote = []

[dependencies]
zz-drop-core = { path = "core" }
zz-drop-tui = { path = "tui" }
rustix = { version = "1", features = ["process", "net"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rpassword = "7"
subtle = "2"
owo-colors = "4"
thiserror = "2"
tar = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.31", features = ["socket"] }

[dev-dependencies]
tempfile = "3"

# Size-tuned profile for shipping a release. Smaller binary at the
# cost of slower compile (~3× the default release). Use it from the
# release pipeline; day-to-day work stays on `cargo build --release`.
#
#   cargo build --profile dist --bin zz-drop
[profile.dist]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

# Cargo workspace: zz-drop is the CLI binary, zz-drop-tui ships
# the `zz-tui` binary called from `zz c`, zz-drop-core is the
# shared library. All three live here as regular subdirectories;
# the previous multi-repo layout was consolidated 2026-05-12.
# zz-drop-server-minimal stays in its own repo and depends on
# zz-drop-core via git URL (transition pending).
[workspace]
members = [".", "core", "tui"]
resolver = "3"
