[package]
name = "zz-drop-core"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Shared core types and protocols for zz-drop"
repository = "https://github.com/zz-drop/zz-drop"
publish = false

[features]
# DTO types in `crate::api` stay always-compiled (server-minimal
# and tooling depend on them directly). This flag marks the
# *client-side* helpers that talk to `zz-drop.net`. v1 default
# leaves them out. Graduates default-on in v2.
default = []
remote = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
argon2 = "0.5"
chacha20poly1305 = "0.10"
ciborium = "0.2"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1"
directories = "6"
toml = "1"
postcard = { version = "1", features = ["use-std"] }
ureq = "3"
url = "2"
percent-encoding = "2"
quick-xml = "0.39"
zstd = "0.13"
sha2 = "0.11"

[dev-dependencies]
tempfile = "3"
