[package]
name = "zz-drop-tui"
version = "0.9.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Ratatui-based setup and configuration UI for zz-drop"
repository = "https://github.com/zz-drop/zz-drop"
homepage = "https://zz-drop.net"
publish = false
exclude = [".github/"]

[dev-dependencies]
tempfile = "3"

[features]
# v1 ships local-only. Anything that talks to `zz-drop.net`
# (account login/signup, push/pull container, alias picker UI)
# is gated behind this flag. Default build has no API client
# compiled in and no remote menu items in the welcome screen.
# Graduates default-on in v2.
default = []
remote = []

[dependencies]
ratatui = "0.30"
zz-drop-core = { path = "../core" }
url = "2"
qrcode = "0.14"
arboard = "3"
open = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
zxcvbn = "3"
directories = "6"
getrandom = "0.2"
rustix = { version = "1", features = ["process"] }

# The `dist` release profile is defined at the workspace root
# (../Cargo.toml). Cargo ignores per-member [profile.*] sections.

